--- a/Teste/index.html
+++ b/Teste/index.html
@@ -7,7 +7,37 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>testando git</h1>
-    <h2> é isso ai!</h2>
+<div id = "box_inicial">
+   Conteúdo do box inicial
+</div>
+<div id = "box_exemplo">
+   Conteúdo do box de box_exemplo
+</div>
+<div id ="box_final">
+   Conteúdo do box final
+</div>
 </body>
+<style>
+    #box_inicial{
+        width: 400px;
+        height: 200px;
+        background-color: red;
+    }
+    #box_exemplo{
+        width: 400px;
+        height: 200px;
+        background-color: blue;
+        margin-top: 30px;
+        margin-bottom: 50px;
+        margin-left: 15px;
+        margin-right: 20px;
+        padding: 50px;
+        border: 10px solid black;
+    }
+    #box_final{
+        width: 400px;
+        height: 200px;
+        background-color: green;
+    }
+</style>
 </html>
